# pmg-exporter

./: .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  go.mod  go.sum  policy-sbom.cue  policy.cue  pyproject.toml  pyrightconfig.json  tools.go
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  dependency-review.yml  docker-release.yml  osv-scan.yml  pr-labels.yml  python-lint.yml  release-verification.yml  release.yml  scorecard.yml
docs/: OIDC_CONFIGURATION.md
pkg/auth/: auth.go  context.go  role.go
pkg/env/: env.go
pkg/graceful/: graceful.go
pkg/graphql/: error.go  graphql.go
pkg/helm/: helm.go  kubeconfig.go  release.go  values.go
pkg/logger/: logger.go
scripts/: portal-check.sh
services/orchestrator/: .env.example  Dockerfile  gqlgen.yml  kubernetes.go
services/orchestrator/cmd/: graphql.go  main.go
services/orchestrator/config/: config.go
services/orchestrator/graph/: convert.go  generated.go  models_gen.go  resolver.go  schema.graphqls  schema.resolvers.go
services/orchestrator/handlers/: handlers.go
services/orchestrator/health/: checks.go  health.go  kubernetes.go
services/portal/: .env.example  .gitignore  .graphqlrc.yaml  .prettierignore  Dockerfile  docker-compose.yml  eslint.config.js  houdini.config.js  package.json  schema.graphql  svelte.config.js
services/portal/src/: app.css  (+3 more)
src/pmg_exporter/: __init__.py  _version.py  cli.py  config.py  exporter.py
(+56 files in other folders)
